# cmux-workspace-dbt

./: .gitignore  Cargo.toml  README.md  cide.toml  clippy.toml  crap.toml  deny.toml  install.sh  justfile  lefthook.yml  release-plz.toml  rust-toolchain.toml
.config/: nextest.toml
.github/actions/setup-rust/: action.yml
.github/workflows/: ci.yml  docs.yml
config/: gitconfig
config/btop/: btop.conf
config/btop/themes/: catppuccin_mocha.theme
config/duckdb/: cide-init.sql
config/gh-dash/: config.yml
config/helix/: config.toml
config/lazygit/: config.yml
config/themes/: catppuccin-mocha.toml  dracula.toml  gruvbox.toml  nord.toml  tokyonight.toml
config/tig/: tigrc
config/yazi/cide/: init.lua  package.toml  yazi.toml
config/yazi/cide-wide/: keymap.toml  package.toml  theme.toml  yazi.toml
config/yazi/cide-wide/flavors/gruvbox.yazi/: flavor.toml
config/yazi/cide-wide/flavors/tokyonight.yazi/: flavor.toml
config/yazi/cide/flavors/nord.yazi/: flavor.toml
crates/ctide/: Cargo.toml
crates/ctide-adapters/: Cargo.toml
crates/ctide-adapters/src/: lib.rs
crates/ctide-core/: Cargo.toml
crates/ctide-core/src/: doctor.rs  domain.rs  lib.rs  ports.rs
crates/ctide-dbt/: Cargo.toml
crates/ctide-dbt/src/: lib.rs
crates/ctide-json/: Cargo.toml
crates/ctide-json/src/: lib.rs
crates/ctide-mux-cmux/: Cargo.toml
crates/ctide-mux-cmux/src/: adapter.rs  lib.rs  wire.rs
crates/ctide-place-macos/: Cargo.toml
crates/ctide-place-macos/src/: lib.rs
crates/ctide-testkit/: Cargo.toml
crates/ctide-testkit/src/: conformance.rs  fake_mux.rs  lib.rs
crates/ctide/src/: main.rs
crates/ctide/src/cmd/: doctor.rs  mod.rs
docs/book/: book.toml
docs/book/src/: SUMMARY.md  doctor.md  introduction.md
docs/roadmap/: build-log.md  ci-quality-framework.md  first-issues.md  product-docs-plan.md  r1-walking-skeleton.md  rebrand-ctide.md  roadmap.md
docs/roadmap/research/: backbone.md  backlog-to-epics.md  ci-quality-framework.md  product-docs-plan.md  rebrand-repo-strategy.md
docs/vision/: design-plan.md  product-vision.md
docs/vision/research/: agent-native-landscape.md  arch-decision.md  arch-sketch-a.md  arch-sketch-b.md  base-vision-synthesis.md  cide-current-state.md  cmux-api-surface.md  cute-dbt-capabilities.md  dbt-ide-vision.md  dbt-landscape.md  opportunity-backlog.md  prior-decisions.md  rust-ide-vision.md  rust-landscape.md  terminal-ide-landscape.md  vision-draft-a.md  vision-draft-b.md  vision-draft-c.md
fidelity/: README.md  cmux-snapshot.sh
fidelity/cmux-0.64.15/: capabilities.json  identify.json  tree.json  version.txt
fidelity/snapshots/0.64.10/: MANIFEST.txt  capabilities.txt  help.txt  version.txt
fidelity/snapshots/0.64.12/: MANIFEST.txt  capabilities.txt  help.txt  subcommand-help.txt  version.txt
lib/: cide-editor.sh  cide-layout.sh  cide-place.swift  common.sh
profiles/: stow.env
scripts/: dep-budget-lint.py  dependency-rule-lint.py  egress-label-lint.py  mirror-drift-lint.py  no-config-write-lint.py  quirk-vault-lint.py
tests/: run.sh
tests/fixtures/dbt/duckdb_memory/: profiles.yml
