[package]
name = "ctide-core"
description = "ctide hexagonal domain model + capability ports (pure, sync, no I/O)."
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

# DEPENDENCY RULE (CI-enforced): ctide-core depends on NOTHING in-workspace.
# thiserror only — the pure core has typed errors but no I/O, no serde (the wire
# contract lives in ctide-json; adapters own their own wire types).
[dependencies]
thiserror = { workspace = true }
