[package]
name = "ctide-json"
description = "ctide's frozen, schema-versioned `--json` output contract (serde only)."
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

# The frozen machine-first contract (design-plan g4). serde ONLY — decoupled from
# ctide-core domain types so internal refactors can't silently break the wire shape.
[dependencies]
serde = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
proptest = { workspace = true }
