[package]
name = "ctide-mux-cmux"
description = "The cmux adapter for ctide's Multiplexer port — the quirk vault."
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

# Implements ctide-core's Multiplexer port over the cmux CLI/socket. Every
# hard-won cmux quirk lives HERE and nowhere else (the quirk-vault lint enforces
# this). Wire parsing is in wire.rs (pure + fixture-tested); the I/O shell is
# adapter.rs. serde_json parses the cmux JSON output.
[dependencies]
ctide-core = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
