[package]
name = "ctide-testkit"
description = "ctide test infrastructure: FakeMux, generated fixtures, the replay server, conformance suites."
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

# Test infrastructure (FakeMux, fixtures, replay server, port conformance kit).
# Excluded from the production CRAP aggregate by design (see crap.toml /
# adr-testkit-coverage). FakeMux + conformance land with ctide doctor at R1.
[dependencies]
ctide-core     = { workspace = true }
ctide-json     = { workspace = true }
ctide-mux-cmux = { workspace = true }

# DEV-ONLY async stack. tokio is BANNED from the shipped graph (deny.toml [bans]),
# but cucumber-rs's harness pulls it dev-only; deny's `exclude-dev = true` scopes
# the ban to the shipped graph so this passes. The dev-test below exercises the
# carve-out for real (proves exclude-dev works — the most important R0 carve-out).
[dev-dependencies]
tokio = { workspace = true }
