[package]
name = "ctide-testkit"
description = "ctide test infrastructure: FakeMux, generated fixtures, the replay server, conformance suites."
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

# Test infrastructure (FakeMux, fixtures, the port conformance kit). Excluded from
# the production CRAP aggregate by design (crap.toml / adr-testkit-coverage). FakeMux
# loads the real fidelity/ fixtures through the cmux adapter's own pure parsers, so
# the fake serves genuinely-captured state.
[dependencies]
ctide-core     = { workspace = true }
ctide-mux-cmux = { workspace = true }

# DEV-ONLY async stack. tokio is BANNED from the shipped graph (deny.toml [bans]);
# deny's `exclude-dev = true` scopes the ban to the shipped graph so this passes.
# The dev-test in lib.rs exercises the carve-out for real.
[dev-dependencies]
tokio = { workspace = true }
