[package]
name = "ctide"
description = "cmux-terminal-ide — a lightweight, agent-native terminal IDE composed on cmux."
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
default-run = "ctide"

[[bin]]
name = "ctide"
path = "src/main.rs"

# The composition root: clap + wiring. Depends on everything; NOTHING in the
# workspace depends on the binary (the dependency rule). The explicit
# `From<&DoctorReport> for ctide_json::DoctorPayload` impl lives here (g4).
[dependencies]
ctide-core        = { workspace = true }
ctide-json        = { workspace = true }
ctide-mux-cmux    = { workspace = true }
ctide-adapters    = { workspace = true }
ctide-dbt         = { workspace = true }
ctide-place-macos = { workspace = true }
clap              = { workspace = true }
serde_json        = { workspace = true }

[dev-dependencies]
# FakeMux drives the doctor verb end-to-end in tests (no live cmux), covering the
# I/O shell + the g4 payload bridge + both renderers.
ctide-testkit = { workspace = true }
